<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/colorBackground">

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:contentDescription="@string/about_logo"
        android:src="@drawable/about_line7"
        android:stateListAnimator="@animator/scale_on_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="307:205"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="О приложении"
        android:textColor="?android:attr/textColorPrimary"

        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_logo"
        app:layout_constraintVertical_bias="0.4" />

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAbout"
        app:layout_constraintVertical_bias="0.8">

        <ImageView
            android:id="@+id/btn_about_tg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/about_tg"
            android:focusable="true"
            android:src="@drawable/about_tg"
            android:stateListAnimator="@animator/scale_on_touch" />

        <ImageView
            android:id="@+id/btn_about_vk"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/about_vk"
            android:focusable="true"
            android:src="@drawable/about_vk"
            android:stateListAnimator="@animator/scale_on_touch" />

        <ImageView
            android:id="@+id/btn_about_github"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/about_github"
            android:focusable="true"
            android:src="@drawable/about_github"
            android:stateListAnimator="@animator/scale_on_touch" />

        <ImageView
            android:id="@+id/btn_about_mail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/about_mail"
            android:focusable="true"
            android:src="@drawable/about_mail"
            android:stateListAnimator="@animator/scale_on_touch" />

        <ImageView
            android:id="@+id/btn_about_rustore"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/about_rustore"
            android:focusable="true"
            android:src="@drawable/about_rustore"
            android:stateListAnimator="@animator/scale_on_touch" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>